# Practica-final-taller

./: README.md  coparacion_csvs.ipynb
24_7_2018/: preguntas
24_7_2018/ej_1/: CMakeLists.txt
24_7_2018/ej_9/: main.c
Agustin/1_7_2019/: preguntas_teoricas
Agustin/23_7_2019/: preguntas_teoricas
Agustin/23_7_2019/ej_5/: CMakeLists.txt  main.cpp
Agustin/2_7_2019/: ej_1
Agustin/6_8_2019/: ej_7.h  preguntas_teoricas
Ivan/: duplicarOcurrencias.c  preguntasTeoricas.txt
Ivan/1C2018OP1/: Ej2  Ej2.c  Ej3  Ej3.c  Ej4  Ej4.cpp  Ej5.c  Ej8  Ej8.cpp  Ej9  Ej9.c
Ivan/1C2018OP2/: Ej1  Ej1.c
Ivan/1C2018OP4/: Ej1  Ej1.cpp  Ej4  Ej4.c  Ej9.cpp
Ivan/1C2019OP3/: Ej8  Ej8.cpp  Ej9.c
Ivan/1C2019OP4/: Ej4  Ej4.c  Ej4Duplicar  Ej4Duplicar.c  Ej5  Ej5.cpp  Ej6  Ej6.cpp  test  test.c
Ivan/1C2019OP5/: Ej7  Ej7.c  Ej7agus  Ej7agus.c  test.txt  testbackup.txt
Ivan/2C2018OP1/: Ej10  Ej10.cpp  Ej8  Ej8.c  Ej9  Ej9.c
Ivan/2C2018OP2/: Ej4  Ej4.cpp  Ej9  Ej9.cpp
Ivan/2C2018OP3/: Ej2  Ej2.c  Ej7  Ej7.cpp
Ivan/2C2018OP4/: Ej1  Ej1.c  Ej10  Ej10.cpp  Ej4.cpp  Ej9  Ej9.c  test.txt
Ivan/2C2019OP1/: Ej3  Ej3.c  Ej9  Ej9.cpp
Ivan/2C2019OP2/: Ej10  Ej10.cpp  Ej9  Ej9.c
Marcos/: ej4  ej4.c
Marcos/01-07-2019/: ej1.txt  ej10.txt  ej2  ej2.c  ej3.txt  ej4  ej4.c  ej4.txt  ej5  ej5.cpp  ej6.txt  ej7  ej7.c  ej7.txt  ej8.txt  ej9.txt
Marcos/02-07-2019/: ej1  ej1.cpp  ej4  ej4.c  ej6  ej6.c  numeros.txt
Marcos/08-06-2019/: ej4  ej4.c  ej5  ej5.cpp  ej6  ej6.c
Marcos/11-12-2018/: ej5  ej5.cpp  ej8  ej8.c
Marcos/12-2-2019/: ej6  ej6.c  ej9  ej9.cpp
Marcos/2017.2-1/: ej1  (+2 more)
(+163 files in other folders)
